Fixed error on license bar on mobile devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,9 +65,13 @@ blockquote {
 .license{
  	position: absolute;
 	bottom: 0;
-	width: 700px;
+	width: 100%;
 	text-align: center;
 	font-size: 12px;
+}
+
+.license hr {
+	max-width: 700px;
 }
 
 .header img {
